add converter for commit
